# langchain-chatgpt-browser-api

./: LICENSE  README.md  pyproject.toml
src/: ChatGPTBrowserAPI.py
src/langchain_chatgpt_browser_api.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
